# ComputerVision

./: README.md  TestImageShow.cpp
ComputerVisionCmake/LearnCVCPP/Chapter2/File_Storage/: CMakeLists.txt  main.cpp  readme.md
ComputerVisionCmake/LearnCVCPP/Chapter2/Read_Videos/: CMakeLists.txt  main.cpp  readme.md
ComputerVisionCmake/LearnCVCPP/Chapter2/Read_Write_imgs/: CMakeLists.txt  main.cpp  readme.md
ComputerVisionCmake/LearnCVCPP/Chapter2/TrialCMake/: CMakeLists.txt  main.cpp
ComputerVisionCmake/LearnCVCPP/Chapter2/TrialCMakeLib/: CMakeLists.txt  Main.cpp  lib.h
ComputerVisionCmake/LearnCVCPP/Chapter2/tryCmakeComplex/trial1/: CMakeLists.txt
ComputerVisionCmake/LearnCVCPP/Chapter2/tryCmakeComplex/trial2/: CMakeLists.txt
ComputerVisionCmake/LearnCVCPP/Chapter2/tryCmakeComplex/trial2/utils/: CMakeLists.txt
ComputerVisionCmake/PracticeProjects/ImageTransformations/: ImageReflection.py  ImageRotation.py  ImageShearing.py  ImageTranslation.py
ComputerVisionCmake/PracticeProjects/IntensiyTransformations/: gammaTransformation.py  logTransformations.py
TryProjects/OpenCVProject1/: OpenCVProject1.sln
TryProjects/OpenCVProject1/OpenCVProject1/: Chapter1.cpp  Chapter2.cpp  Chapter3.cpp  OpenCVProject1.vcxproj
TryProjects/OpenCVProject1/OpenCVProject1/x64/Release/: OpenCVProject1.exe.recipe  OpenCVProject1.iobj  OpenCVProject1.ipdb
TryProjects/OpenCVProject1/OpenCVProject1/x64/Release/OpenCVProject1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenCVProject1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
