CMAKE_MINIMUM_REQUIRED(VERSION 3.27.4)

CMAKE_POLICY(SET CMP0012 NEW)

PROJECT(ReadVideo)

#finding opencv
FIND_PACKAGE(OpenCV 4.0.0 REQUIRED)
MESSAGE(" OpenCV version ${OpenCV_VERSION} found")

INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
LINK_DIRECTORIES(${OpenCV_LINK_DIR})

ADD_EXECUTABLE(${PROJECT_NAME} main.cpp)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OpenCV_LIBS})