CMAKE_MINIMUM_REQUIRED(VERSION 3.27.4)

CMAKE_POLICY(SET CMP0012 NEW)

PROJECT(trailOpenCV)

# Mandates OpenCV
FIND_PACKAGE (OpenCV 4.0.0 REQUIRED)
MESSAGE (" OpenCV Version found : ${OpenCV_VERSION}")

INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
LINK_DIRECTORIES(${OpenCV_LIB_DIR})

ADD_EXECUTABLE(${PROJECT_NAME} main.cpp)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OpenCV_LIBS})